# python-first-project

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  python-tests.yml
docs/source/: conf.py  development.rst  index.rst  installation.rst  usage.rst
docs/source/api/: modules.rst  python_first_project.financial.rst
src/python_first_project/: example.py  financial.py
tests/: test_example.py  test_financial.py
