[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-first-project"
version = "0.1.0"
description = "A professional Python project demonstrating best practices"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.pytest.ini_options]
addopts = "--cov=python_first_project --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["python_first_project"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError:"
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
